# FlyanxOS

./: .gitignore  CMakeLists.txt  Flyanx.img  Makefile  README.en.md  README.md  bochsrc
include/: a.out.h  ansi.h  ctype.h  dir.h  elf.h  errno.h  fcntl.h  kernelConst.inc  lib.h  limits.h  signal.h  stdarg.h  stddef.h  stdio.h  stdlib.h  string.h  termios.h  unistd.h
include/flyanx/: callnr.h  common.h  config.h  const.h  flylib.h  keymap.h  partition.h  syslib.h  type.h  u64.h
include/ibm/: diskparm.h  int86.h  partition.h
include/sys/: dev.h  ioctl.h  ptrace.h  sigcontext.h  stat.h  svrctl.h  types.h  wait.h
src/boot/: boot.asm  hd_boot.asm  hd_loader.asm  loader.asm  readme
src/boot/include/: fat12hdr.inc  load.inc  pm.inc
src/commands/: Makefile  echo  flyanx_prog_start.asm  install.tar  pwd  readme
src/commands/simple/: echo.c  ls.c  pwd.c
src/fly/: const.h  fly.h  global.h  main.c  misc.c  param.h  prototype.h  readme  table.c  type.h  utils.c
src/fs/: const.h  dev.h  device.c  dir.h  file.c  file.h  fs.h  fsproc.h  global.h  inode.c  inode.h  link.c  main.c  misc.c  open.c  param.h  path.c  pipe.c  prototype.h  read_write.c  readme  statdir.c  super.c  super.h  table.c  type.h  utils.c
src/internet/: inet.c  inet.h  readme
src/kernel/: asmconst.inc  assert.h  at_driver.c  at_wind.c  clock.c  console.c  const.h  dmp.c  driver.c  driver.h  drvlib.h  exception.c  gloal.h  global.h  hd.h  i8259.c  kernel.asm  kernel.h  kernel_386_lib.asm  keyboard.c  main.c  message.c  message.h  misc.c  process.c  process.h  protect.c  protect.h  prototype.h  readme  start.c  system.c  table.c  test.c  tty.c  tty.h  type.h
src/kernel/keymaps/: us-std.src
src/lib/: readme
src/lib/ansi/: memcmp.c  stringc.c
src/lib/i386/: message.asm
src/lib/other/: _sleep.c  errno.c  itoa.c  loadname.c  syscall.c
src/lib/posix/: _close.c  _creat.c  _exec.c  _execl.c  _execv.c  _execve.c  _exit.c  _fork.c  _fstat.c  _getpid.c  _getppid.c  _link.c  _lseek.c  _mkdir.c  _open.c  _read.c  _stat.c  _unlink.c  _wait.c  _waitpid.c  _write.c  readme
src/lib/stdio/: local.h  printf.c  sprintf.c  vsprintf.c
src/lib/syscall/: close.asm  creat.asm  exec.asm  execl.asm  execv.asm  execve.asm  exit.asm  fork.asm  fstat.asm  getpid.asm  getppid.asm  link.asm  lseek.asm  mkdir.asm  open.asm  read.asm  readme  sleep.asm  stat.asm  unlink.asm  waitpid.asm  write.asm
src/lib/syslib/: kernel_debug.c  kernel_lib.asm  kprintf.c  putk.c  string.asm  sys_blues.c  sys_copy.c  sys_exec.c  sys_exit.c  sys_fork.c  sys_get_map.c  sys_get_sp.c  sys_new_map.c  sys_set_prog_frame.c  sys_sudden.c  syslib.h  task_call.c
src/mm/: alloc.c  break.c  const.h  exec.c  fork_exit.c  forkexit.c  get_set.c  global.h  main.c  misc.c  mm.h  mmproc.h  param.h  prototype.h  readme  table.c  type.h  utils.c
src/origin/: fly_shell.c  origin.c  readme  tar.c
src/test/: readme  test.c
